Fix CSS to move tray scrollbar down more

--- a/css/main.css
+++ b/css/main.css
@@ -53,7 +53,7 @@
   display: block;
   text-align: center;
   margin-bottom: 20px;
-  max-height: 110px;
+  max-height: 130px;
   overflow-x: auto;
   overflow-y: hidden;
   white-space: nowrap;
